# mycelium-l1

./: CROSS-REF.md  Cargo.toml  README.md
crates/mycelium-l1/: Cargo.toml
crates/mycelium-l1/src/: ambient.rs  ambient_policy.rs  ast.rs  checkty.rs  decision.rs  elab.rs  eval.rs  fault.rs  grade_catalog.rs  init.rs  legal_pair.rs  lexer.rs  lib.rs  meet_boundary.rs  parse.rs  phyla.rs  regime.rs
crates/mycelium-l1/src/tests/: affine_stage3.rs  ambient_policy.rs  checkty.rs  compiler_stage5_register.rs  compiler_stage5_tyref.rs  compiler_stage5_unify.rs  elab.rs  facility_stage1_hygiene.rs  grade_catalog.rs  hygiene_affine_expanded.rs  hygiene_defsite_resolution.rs  hygiene_expr_sugar.rs  init.rs  legal_pair.rs  meet_boundary.rs  mod.rs  mono.rs  prelude_instance_seed.rs  preseed.rs  reachability_stage1b.rs  regime.rs  reveal.rs  reveal_roundtrip_e3.rs  show.rs  type_strictness.rs  usefulness.rs  vec_prelude_seed.rs  wrapping.rs
crates/mycelium-l1/tests/: ambient_policy.rs  compiler_stage3.rs  compiler_stage4_ambient.rs  conformance.rs  ctor_seal.rs  depth_metric_parity.rs  enablement.rs  legal_pair.rs  phylum.rs  phylum_exec.rs  prim_table.rs  std_truncate.rs  try_operator.rs
docs/: GAP-ffi-host-and-surface.md
docs/spec/grammar/: README.md  mycelium.ebnf
docs/spec/grammar/conformance/accept/: 01-minimal-nodule.myc  02-fn-and-let.myc  03-swap.myc  04-type-and-match.myc  05-guarantee-annotation.myc  06-wild-and-substrate.myc  07-spore.myc  08-maturation-and-thaw.myc  09-trait.myc  10-literals.myc  11-for-fold.myc  12-ambient-representation.myc  13-colony-hypha.myc  14-trait-impl.myc  16-effect-annotations.myc  18-wild-std-sys.myc  19-phylum-cross-nodule.myc  20-operator-syntax.myc  20-seq-and-bytes-literals.myc  20-tutorial-classifier.myc  21-rfc0037-surface.myc  22-lower-derive.myc  23-object-composition.myc  24-fuse-reclaim-tier.myc  25-consume-and-inherent-impl.myc  26-short-repr-keywords.myc  27-first-class-fn-type.myc
docs/spec/grammar/conformance/reject/: 01-no-nodule-header.myc  02-swap-missing-policy.myc  03-unclosed-brace.myc  04-bad-trit.myc  05-reserved-word-ident.myc  06-missing-arrow.myc  07-empty.myc  08-imperative-while.myc  09-default-missing-paradigm.myc  10-phylum-no-nodule.myc  11-matured-fn-retired.myc  12-runtime-vocab-reserved-not-active.myc  13-orphan-hypha.myc  14-impl-reserved-ident.myc  15-trait-param-bound.myc  17-duplicate-effect.myc  18-consume-not-an-item.myc  19-grow-reserved-not-active.myc  20-odd-hex-bytes.myc  21-empty-hex-bytes.myc  22-old-arrow-retired.myc  23-old-fn-typeparam-retired.myc  24-old-trait-typeparam-retired.myc  25-old-angle-trit-retired.myc  26-lower-missing-eq.myc  27-derive-missing-for.myc  28-object-empty-body.myc  29-missing-semicolon-terminator.myc  30-vec-short-alias-rejected.myc  31-old-le-ge-glyph-retired.myc
lib/compiler/: README.md  ambient.myc  ast.myc  lex.myc  nodule.myc  parse.myc  semcore.myc  substrate.myc  token.myc  totality.myc
src/: ast.rs  fuse.rs  grade.rs  mono.rs  ord3.rs  preseed.rs  reveal.rs  show.rs  token.rs  totality.rs  type_strictness.rs  usefulness.rs
src/tests/: compiler_stage5_classify.rs  compiler_stage5_elab.rs  compiler_stage5_evalmatch.rs  compiler_stage5_freevars.rs  compiler_stage5_normpat.rs  compiler_stage5_semcore.rs  cross_phylum.rs  decision.rs  defsite_resolution_stage2.rs  fault.rs  marshal_support.rs  mod.rs  ord3.rs  substrate.rs  via_ordering.rs
tests/: check.rs  compiler_stage3_ast.rs  compiler_stage4_ambient.rs  cross_phylum.rs
